--- a/sass/app/_layout.scss
+++ b/sass/app/_layout.scss
@@ -15,11 +15,14 @@ body {
   min-width: 320px; min-height: 700px;
 
   font-size: 12px; // stylelint-disable declaration-property-unit-blacklist
-  overflow: hidden; //
   padding-right: env(safe-area-inset-right);
   padding-left: env(safe-area-inset-left);
   position: relative;
   z-index: 0;
+
+  @media (min-width: 1331px) {
+    overflow: hidden;
+  }
 
   // @media(prefers-color-scheme: dark) {
   //   color: $uchu.inc-gray-1;
